--- a/app/src/components/icongallery/IconGallery.scss
+++ b/app/src/components/icongallery/IconGallery.scss
@@ -1,4 +1,37 @@
 .icon-gallery {
+	.filter-row {
+		.text-input-container {
+			display: inline-block;
+			border: 1px solid #c6cbd1;
+			border-radius: 2px;
+			margin: 0 6px;
+
+			input {
+				border: 0;
+				font-size: 14px;
+				line-height: 14px;
+				font-weight: 300;
+				color: #757576;
+				margin: 0;
+				padding: 8px 12px;
+				width: 40vw;
+			}
+
+			.clear-button {
+				border: 0;
+				border-radius: 0;
+				background: transparent;
+				margin: 0 8px;
+				padding: 2px;
+				cursor: pointer;
+
+				.icon {
+					font-size: 11px;
+				}
+			}
+		}
+	}
+
 	.icon-set {
 		display: flex;
 		flex-flow: row wrap;
