--- a/app/src/App.scss
+++ b/app/src/App.scss
@@ -1,6 +1,40 @@
+@import '../node_modules/genesys-react-components/src/theme/variables.scss';
+@import '../node_modules/genesys-react-components/src/theme/typography.scss';
+@import '../node_modules/genesys-react-components/src/theme/roboto.scss';
+
+html,
+body {
+	height: 100%;
+	width: 100%;
+	padding: 0;
+	margin: 0;
+
+	// Basic Typography
+	text-align: center;
+	font-size: 14px;
+	line-height: 24px;
+}
+
+// Define classes for the light and dark themes
+.app-light {
+	@include writeCssVars($theme-vars);
+}
+
+.app-dark {
+	@include writeCssVars($theme-vars-dark);
+}
+
 .app {
-	margin: 0 10%;
-	padding: 0 0 10% 0;
+	margin: 0;
+	padding: 0;
+	background-color: var($--theme-core-background-color);
+	color: var($--theme-core-text-color);
+	overflow: auto;
+
+	.app-padding {
+		margin: 0 10%;
+		padding: 0 0 10% 0;
+	}
 
 	.app-content {
 		max-width: 1200px;
@@ -22,7 +56,7 @@
 				color: #ff4f1f;
 
 				&:hover {
-					color: darken(#ff4f1f, 10%);
+					color: adjust(#ff4f1f, -10%);
 				}
 			}
 		}
